# marathon

./: .gitignore  .goreleaser.yaml  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE-APACHE.txt  LICENSE-MIT.txt  README.md  TODO.md  demo.tape  runner-3.txt  runner.txt  text.txt
.claude/skills/ratatui/: SKILL.md
.claude/skills/ratatui/evals/: evals.json
.claude/skills/ratatui/references/: 01-core-concepts.md  02-layout.md  03-text-and-styling.md  04-widgets.md  05-events-and-input.md  06-text-editing.md  07-async-and-architecture.md
assets/skills/marathon/: SKILL.md
samples/: README.md  demo.md  hello.md  interactive.md  shell-override.md  tmpdir.md
src/: ansi.rs  book.rs  cli.rs  lib.rs  main.rs  runner.rs  scaffold.rs  skills.rs  tui.rs  util.rs  widget_markdown.rs
src/widgets/: code.rs  footer.rs  help.rs  markdown.rs  mod.rs  scrollview.rs  spinner.rs  wrap.rs
tests/: exec_flow.rs  sample_parse.rs
