[package]
name = "marathon"
version = "0.2.1"
edition = "2024"
description = "A CLI/TUI for viewing, managing, and running markdown runbooks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/a-poor/marathon"
readme = "README.md"
keywords = ["runbook", "markdown", "tui", "cli", "automation"]
categories = ["command-line-utilities"]
rust-version = "1.88.0"

[dependencies]
anyhow = "1.0.102"
arboard = { version = "3", default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
glob = "0.3.3"
libc = "0.2"
markdown = "1.0.0"
ratatui = "0.30.1"
ratatui-textarea = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde-kv = "0.1.1"
serde_json = "1.0.150"
serde_yaml = "0.9.34"
strip-ansi-escapes = "0.2.1"
tempfile = "3.27.0"
textwrap = "0.16.2"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1"
